# XGramDesktop

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LEGAL  README-RU.md  README.md  REVIEW.md  changelog.txt
.agents/shared/: test-loop.md
.agents/skills/implement/: SKILL.md
.agents/skills/implement/agents/: openai.yaml
.agents/skills/implement/references/: computer-use-testing.md
.agents/skills/task-think/: PROMPTS.md  SKILL.md
.claude/: grab_clipboard.ps1  grab_clipboard.sh
.claude/commands/: icon.md  implement.md  reflect.md  release.md  task.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  config.yml
.github/scripts/: generate_changelog.py
.github/workflows/: changelog.yml  docker.yml  linux.yml  mac.yml  mac_packaged.yml  snap.yml  win.yml
Telegram/SourceFiles/: apiwrap.cpp  apiwrap.h  config.h  logs.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  stdafx.h  tray.cpp  tray_accounts_menu.cpp  tray_accounts_menu.h  tray_accounts_menu_dummy.cpp
Telegram/SourceFiles/core/: version.h
Telegram/SourceFiles/settings/: detailed_settings_button.cpp  detailed_settings_button.h  settings.style  settings_builder.cpp  settings_builder.h  settings_codes.cpp  settings_common.cpp  settings_common.h  settings_common_session.cpp  settings_common_session.h  settings_credits_graphics.cpp  settings_credits_graphics.h  settings_experimental.cpp  settings_experimental.h  settings_faq_suggestions.cpp  settings_faq_suggestions.h  settings_intro.cpp  settings_notifications_common.h  settings_power_saving.cpp  settings_power_saving.h  settings_privacy_controllers.cpp  settings_privacy_controllers.h  settings_recent_searches.cpp  settings_recent_searches.h  settings_scale_preview.cpp  settings_search.cpp  settings_search.h
Telegram/SourceFiles/settings/business/: settings_away_message.cpp  settings_chat_intro.cpp  settings_chat_links.cpp  settings_chatbots.cpp  settings_greeting.cpp  settings_location.cpp  settings_quick_replies.cpp  settings_recipients_helper.h  settings_shortcut_messages.cpp  settings_working_hours.cpp
Telegram/SourceFiles/settings/cloud_password/: settings_cloud_password_common.cpp  settings_cloud_password_common.h  settings_cloud_password_email.cpp  settings_cloud_password_input.cpp  settings_cloud_password_manage.cpp  settings_cloud_password_step.cpp  settings_cloud_password_step.h  settings_cloud_password_validate_icon.cpp
Telegram/SourceFiles/settings/sections/: settings_active_sessions.cpp  settings_active_sessions.h  settings_advanced.cpp  settings_advanced.h  settings_blocked_peers.cpp  settings_blocked_peers.h  settings_business.cpp  settings_business.h  settings_calls.cpp  settings_calls.h  settings_chat.cpp  settings_chat.h  settings_credits.cpp  settings_credits.h  settings_folders.cpp  settings_folders.h  settings_global_ttl.cpp  settings_global_ttl.h  settings_information.cpp  settings_information.h  settings_local_passcode.cpp  settings_local_passcode.h  settings_local_storage.cpp  settings_local_storage.h  settings_main.cpp  settings_main.h  settings_notifications.cpp  settings_notifications.h  settings_notifications_reactions.cpp  settings_notifications_reactions.h  settings_notifications_type.cpp  settings_notifications_type.h  settings_passkeys.cpp  settings_passkeys.h  settings_premium.cpp  settings_premium.h  settings_privacy_security.cpp  settings_privacy_security.h  settings_shortcuts.cpp  settings_shortcuts.h  (+2 more)
Telegram/SourceFiles/statistics/: chart_widget.cpp  statistics.style
Telegram/SourceFiles/statistics/widgets/: chart_lines_filter_widget.cpp
Telegram/SourceFiles/storage/: file_upload.cpp  localimageloader.cpp  localimageloader.h  localstorage.cpp  serialize_peer.cpp  storage_account.cpp  storage_cloud_blob.cpp  storage_domain.cpp  storage_media_prepare.cpp  storage_media_prepare.h  storage_shared_media.h  storage_sparse_ids_list.cpp
Telegram/SourceFiles/storage/details/: storage_file_utilities.cpp  storage_settings_scheme.cpp
Telegram/SourceFiles/support/: support_autocomplete.cpp  support_helper.cpp
Telegram/SourceFiles/tests/: test_main.cpp  test_main.h  test_text.cpp
Telegram/SourceFiles/ui/: cached_round_corners.cpp  color_indices.style  dynamic_thumbnails.cpp  dynamic_thumbnails.h  empty_userpic.cpp  filter_icon_panel.cpp  filter_icon_panel.h  item_text_options.cpp  menu_icons.style  rows_scroll_cache.cpp  rows_scroll_cache.h  search_field_controller.cpp  unread_badge.cpp  unread_badge.h  unread_badge_paint.cpp  unread_badge_paint.h  userpic_view.cpp  userpic_view.h
Telegram/SourceFiles/ui/boxes/: boost_box.cpp  calendar_box.cpp  calendar_box.h  choose_date_time.cpp  choose_font_box.cpp  collectible_info_box.cpp  confirm_phone_box.cpp  country_select_box.cpp  country_select_box.h  edit_birthday_box.cpp  edit_invite_link.cpp  edit_invite_link.h  emoji_stake_box.cpp  peer_qr_box.cpp  show_or_premium_box.cpp
Telegram/SourceFiles/ui/chat/: chat.style  (+16 more)
Telegram/SourceFiles/window/: main_window.cpp  main_window.h  notifications_manager.cpp  notifications_manager.h  notifications_manager_default.cpp  section_widget.cpp  section_widget.h  window.style  window_chat_preview.cpp  window_chat_switch_process.cpp  window_connecting_widget.cpp  window_controller.cpp  window_controller.h  window_filters_menu.cpp  window_filters_menu.h  window_lock_widgets.cpp  window_main_menu.cpp  window_main_menu.h  window_main_menu_helpers.cpp  window_media_preview.cpp  window_media_preview.h  window_peer_menu.cpp  window_peer_menu.h  window_separate_id.cpp  window_separate_id.h  window_session_controller.cpp  window_session_controller.h  window_session_controller_link_info.h  window_setup_email.cpp  window_slide_animation.cpp  window_slide_animation.h
Telegram/lib_icu/: CMakeLists.txt
Telegram/lib_icu/data/: filters.json
cmake/: options_win.cmake
docs/: api_credentials.md  building-linux.md  building-mac.md  building-win-x64.md
lib/xdg/: one.xgram.desktop.desktop  one.xgram.desktop.metainfo.xml  one.xgram.desktop.service
snap/: snapcraft.yaml
(+156 files in other folders)
